--- a/TODO
+++ b/TODO
@@ -1,12 +1,10 @@
 Pegar a página html de busca a partir da entrada do usuário ! DONE
 Buscar nessa página html a tabela com os resultados da pesquisa ! DONE
-Montar uma representação dessa tabela com a biblioteca curses
-Aceitar a entrada do usuário [1..n] como seleção na tabela anterior
-Baixar a pagina html da seleção (feita anteriormente)
-Buscar nessa nova pagina html um link com o children "GET" e href com extensão pdf
-Buscar nesta pagina as informacoes se referencia do livro/artigo
-Ler as configuracoes do usuario sobre referencias
+Montar uma representação dessa tabela na stdout
+Aceitar a entrada do usuário [1..n] como seleção na tabela anterior ! DONE
+Baixar a pagina html da seleção (feita anteriormente) ! DONE
+Buscar nessa nova pagina html um link com o children "GET" e href com extensão pdf ! DONE
+Buscar nesta pagina as informacoes se referencia do livro/artigo ! DONE
+Ler as configuracoes do usuario sobre referencias ! DONE
 Se tiver configurado, salve um arquivo .bib no diretorio desejado
-Senao leia do stdin se deseja salvar e em qual dir
-Baixar o pdf para o diretório especificado pelo usuário no config.h
-DONE
+Baixar o pdf para o diretório especificado pelo usuário no config.h ! DONE
